phase2: added retry